feat/change store informations controller, e2e tests and swagger documentation
